2008-02-22  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-popmenu.cc:
	* src/utils.cc:
	Set proper exec dir for started MIME applications

2008-02-18  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-bookmark-dialog.cc:
	Allow resizing of bookmark dlg

	* src/Makefile.am:
	* src/gnome-cmd-data.cc:
	* src/utils.cc:
	Fix for problem #448942 (SHIFT+ENTER: running a command in a separate terminal)

2008-02-11  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-app.h:
	* src/gnome-cmd-file-popmenu.cc:
	* src/gnome-cmd-file-props-dialog.cc:
	Simplify error handling for MIME retrieving

2008-02-06  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file.cc:
	* src/gnome-cmd-file-popmenu.cc:
	* src/gnome-cmd-file-props-dialog.cc:
	Fix for crash when handling mime for some exotic permissions

2008-01-28  Piotr Eljasiak  <epiotr@use.pl>

	* src/utils.cc:
	Simplify code for string handling

2008-01-26  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file.cc:
	* src/gnome-cmd-file.h:
	Do not use escaped directory name when runnning editor application

2008-01-22  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-popmenu.cc:
	Run "Open with other..." application in file's directory

2008-01-21  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-dir.cc:
	Fixed problem #510567 (failed assert when deleting dir)

	* src/gnome-cmd-dir.cc:
	* src/gnome-cmd-dir.h:
	* src/gnome-cmd-file.cc:
	* src/gnome-cmd-file-list.cc:
	* src/gnome-cmd-file-list.h:
	* src/gnome-cmd-file-props-dialog.cc:
	* src/gnome-cmd-file-selector.cc:
	* src/gnome-cmd-rename-dialog.cc:
	Fixed problem #345314 (cursor not staying on file while renaming)

2008-01-19  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-list.cc:
	Point to the focused file properly

2008-01-17  Piotr Eljasiak  <epiotr@use.pl>

	* src/libgviewer/image-render.cc:
	Yet another fix for problem with updating of internal viewer status bar

	* src/gnome-cmd-file-props-dialog.cc: